# AndroidLearn

./: README.md  aop.gradle  base.gradle  build.gradle  config.gradle  gradle.properties  settings.gradle
annotation/: README.md  build.gradle
annotationcompiler/: README.md  build.gradle
app/: README.md  build.gradle
app/src/debug/: AndroidManifest.xml
app/src/debug/res/fps/layout/: fps_layout.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test.html
app/src/main/cpp/: CMakeLists.txt  README.md  native-lib.cpp
app/src/main/res/anim/layout/: view_star_anim.xml
app/src/main/res/anim/values/: ids.xml
app/src/main/res/appbarlayout/layout/: appbar_layout_activity.xml
app/src/main/res/layout/: activity_constraint.xml  activity_main.xml
app/src/main/res/main/values/: strings.xml
app/src/main/res/values/: strings.xml
common/: README.md  build.gradle
compiler/: README.md  build.gradle
download/: README.md  build.gradle
git/: README.md
gradle/wrapper/: gradle-wrapper.properties
gradleplugin/: README.md  build.gradle
lintaar/: README.md  build.gradle
lintaar/src/main/: AndroidManifest.xml
lintjar/: README.md  build.gradle
module/common/: README.md  build.gradle
module/common/src/main/: AndroidManifest.xml
module/player/: README.md  build.gradle
module/player/src/main/: AndroidManifest.xml
module/shake/: build.gradle
module/webview_module/: build.gradle
module/webview_module/src/main/: AndroidManifest.xml
plugin/: README.md  build.gradle
shake/: README.md  build.gradle
shake/src/main/: AndroidManifest.xml
ui/: README.md  build.gradle
ui/src/main/: AndroidManifest.xml
utils/: README.md
utils/src/main/: AndroidManifest.xml
webview/: README.md  build.gradle
webview/src/main/: AndroidManifest.xml
webview/src/main/res/drawable/: progress_indeterminate_horizontal.xml
webview/src/main/res/layout/: webview_activity.xml
webview_module/: README.md  build.gradle
(+710 files in other folders)
